force-app/main/default/objects/Agent_Context__c/Agent_Context__c.object-meta.xml
<CustomObject>
    <description>Stores the AI agent's long-term memory per Contact for persistent context across sessions.</description>
    <label>Agent Context</label>
    <pluralLabel>Agent Contexts</pluralLabel>
    <nameField>
        <label>Agent Context Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>