force-app/main/default/objects/Agent_Context__c/fields/Communication_Style__c.field-meta.xml
<CustomField>
    <fullName>Communication_Style__c</fullName>
    <description>User preference for agent tone (e.g., Concise, Detailed, Technical).</description>
    <label>Communication Style</label>
    <length>50</length>
    <type>Text</type>
</CustomField>