force-app/main/default/objects/Agent_Context__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Links this memory record to the specific user.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agent Contexts</relationshipLabel>
    <relationshipName>Agent_Contexts</relationshipName>
    <type>Lookup</type>
</CustomField>