force-app/main/default/objects/Agent_Context__c/fields/Last_Topic_Summary__c.field-meta.xml
<CustomField>
    <fullName>Last_Topic_Summary__c</fullName>
    <description>LLM-generated summary of the user's last interaction.</description>
    <label>Last Topic Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>