force-app/main/default/objects/Agent_Context__c/fields/Pending_Goal__c.field-meta.xml
<CustomField>
    <fullName>Pending_Goal__c</fullName>
    <description>What the user was trying to achieve but didn't finish (e.g., Booking a flight).</description>
    <label>Pending Goal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>