force-app/main/default/objects/Agent_Context__c/fields/Unresolved_Issue__c.field-meta.xml
<CustomField>
    <fullName>Unresolved_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags if the user left the last session angry or with an open support ticket.</description>
    <label>Unresolved Issue</label>
    <type>Checkbox</type>
</CustomField>