force-app/main/default/objects/Agent_Context__c/fields/User_Tier__c.field-meta.xml
<CustomField>
    <fullName>User_Tier__c</fullName>
    <description>Loyalty or service tier (e.g., Standard, VIP) to drive business rules.</description>
    <label>User Tier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>